Show topical event title as extra header context
We've decided not to use the facet tag for this because there's no way
to get this filter back if you remove it (other than following
whatever link you found to the page again).

--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -55,6 +55,7 @@
       <% else %>
         <%= render partial: 'govuk_publishing_components/components/title', locals: {
           title: content_item.title,
+          context: title_context,
         } %>
       <% end %>
 
