--- a/app/views/coronavirus_business_support_checker/results.html.erb
+++ b/app/views/coronavirus_business_support_checker/results.html.erb
@@ -55,24 +55,25 @@
   </div>
 
   <% if criteria_keys.present? %>
-    <%= render 'components/email_link', {
-      data_attributes: {
-        "module": "track-click",
-        "track-action": action_based_email_link_label,
-        "track-category": "StayUpdated",
-        "track-label": transition_checker_email_signup_path
-      },
-      link_text: action_based_email_link_label,
-      link_href: transition_checker_email_signup_path(c: criteria_keys),
-      link_title: t("brexit_checker.results.email_sign_up_title"),
-    } %>
+      <section
+        class="brexit-checker-actions__group"
+        data-analytics-ecommerce
+        data-ecommerce-start-index=1
+        data-list-title="Business support checker"
+        data-search-query
+      >
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds">
+            <%= render "action_list", {
+              analytics_group: "business-support",
+              actions: @actions
+            } %>
+          </div>
+        </div>
+      </section>
+    <%= render 'results_with_no_actions', criteria: @criteria if @actions.empty? %>
 
-    <%= render 'results_business_actions', business_results: @business_results if @business_results.any? %>
-    <%= render 'results_citizen_actions', citizen_results_groups: @citizen_results_groups if @citizen_results_groups.any? %>
-    <%= render 'results_with_no_actions', criteria: @criteria if (@business_results.empty? && @citizen_results_groups.empty?) %>
-
-    <%= render 'stay_updated' %>
     <%= render 'share_links' %>
-    <%= render 'print_link' if @business_results.any? || @citizen_results_groups.any? %>
+    <%= render 'print_link' if @actions.any? %>
   <% end %>
 </div>
