Add locales for business support checker

--- a/app/views/coronavirus_business_support_checker/results.html.erb
+++ b/app/views/coronavirus_business_support_checker/results.html.erb
@@ -12,8 +12,8 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GOV.UK">
   <meta property="og:url" content="<%= page_url %>">
-  <meta property="og:title" content="<%= t('brexit_checker.results.social_media_meta.title') %>">
-  <meta property="og:description" content="<%= t('brexit_checker.results.social_media_meta.description') %>">
+  <meta property="og:title" content="<%= t('business_support_checker.results.social_media_meta.title') %>">
+  <meta property="og:description" content="<%= t('business_support_checker.results.social_media_meta.description') %>">
   <meta name="twitter:card" content="summary">
   <link rel="canonical" href="<%= page_url %>">
 <% end %>
@@ -23,15 +23,15 @@
     collapse_on_mobile: true,
     breadcrumbs: [
       {
-        title: t('brexit_checker.breadcrumbs.home'),
+        title: t('business_support_checker.breadcrumbs.home'),
         url: "/"
       },
       {
-        title: t('brexit_checker.breadcrumbs.brexit-home'),
+        title: t('business_support_checker.breadcrumbs.coronavirus-home'),
         url: "/transition"
       },
       {
-        title: t('brexit_checker.breadcrumbs.brexit-check'),
+        title: t('business_support_checker.breadcrumbs.business-support-check'),
         url: "/transition-check"
       }
     ]
