--- a/app/views/email_alert_subscriptions/new.html.erb
+++ b/app/views/email_alert_subscriptions/new.html.erb
@@ -9,32 +9,32 @@
 
 <div class="govuk-width-container">
 
-  <% if @level_one_taxon %>
+  <% if @signup_presenter.show_taxon_choices? %>
     <%= render partial: 'govuk_publishing_components/components/title', locals: {
-      title: @level_one_taxon[:title],
+      title: @signup_presenter.level_one_taxon[:title],
       context: "Email alert subscription"
     } %>
 
     <h1 class="govuk-heading-l">What do you want to get alerts about?</h1>
 
-    <%= form_tag email_alert_subscriptions_path(@taxon_facet.query_params), class: 'signup-choices' do %>
+    <%= form_tag email_alert_subscriptions_path(@signup_presenter.taxon_facet.query_params), class: 'signup-choices' do %>
       <p>Everything published to GOV.UK about</p>
 
       <%= render "govuk_publishing_components/components/radio", {
         name: "subscriber_list_params[all_part_of_taxonomy_tree]",
         items: [{
-          value: @level_one_taxon[:value],
-          text: @level_one_taxon[:text],
-          checked: @filter_params[:level_two_taxon].blank?,
+          value: @signup_presenter.level_one_taxon[:value],
+          text: @signup_presenter.level_one_taxon[:text],
+          checked: @signup_presenter.level_one_taxon[:value] == @filter_params[:level_one_taxon],
           conditional: '<p class="govuk-body">This will include alerts about all the topics below</p>'.html_safe,
         }]
       } %>
 
-      <p>or only one of the following <%= @sub_taxons.count %> topics</p>
+      <p>or only one of the following <%= @signup_presenter.sub_taxons.count %> topics</p>
 
       <%= render "govuk_publishing_components/components/radio", {
         name: "subscriber_list_params[all_part_of_taxonomy_tree]",
-        items: @sub_taxons.map { |sub_taxon| {
+        items: @signup_presenter.sub_taxons.map { |sub_taxon| {
           value: sub_taxon["content_id"],
           text: sub_taxon["title"],
           checked: sub_taxon["content_id"] == @filter_params[:level_two_taxon],
