--- a/app/views/email_alert_subscriptions/new.html.erb
+++ b/app/views/email_alert_subscriptions/new.html.erb
@@ -9,9 +9,9 @@
 
 <div class="govuk-width-container">
 
-  <% if @signup_presenter.show_taxon_choices? %>
+  <% if @signup_presenter.selected_taxon %>
     <%= render partial: 'govuk_publishing_components/components/title', locals: {
-      title: @signup_presenter.level_one_taxon[:title],
+      title: @signup_presenter.selected_taxon[:title],
       context: "Email alert subscription"
     } %>
 
@@ -23,9 +23,9 @@
       <%= render "govuk_publishing_components/components/radio", {
         name: "subscriber_list_params[all_part_of_taxonomy_tree]",
         items: [{
-          value: @signup_presenter.level_one_taxon[:value],
-          text: @signup_presenter.level_one_taxon[:text],
-          checked: @signup_presenter.level_one_taxon[:value] == @filter_params[:level_one_taxon],
+          value: @signup_presenter.selected_taxon[:value],
+          text: @signup_presenter.selected_taxon[:text],
+          checked: true,
           conditional: '<p class="govuk-body">This will include alerts about all the topics below</p>'.html_safe,
         }]
       } %>
@@ -37,7 +37,6 @@
         items: @signup_presenter.sub_taxons.map { |sub_taxon| {
           value: sub_taxon["content_id"],
           text: sub_taxon["title"],
-          checked: sub_taxon["content_id"] == @filter_params[:level_two_taxon],
           conditional: sub_taxon["description"].present? ? ("<p class=\"govuk-body\">This will include: #{sub_taxon["description"]}</p>").html_safe : nil
         } }
       } %>
