--- a/app/views/email_alert_subscriptions/new.html.erb
+++ b/app/views/email_alert_subscriptions/new.html.erb
@@ -9,33 +9,33 @@
 
 <div class="govuk-width-container">
 
-  <% if @signup_presenter.selected_taxon %>
+  <% if @selected_taxon.present? %>
     <%= render partial: 'govuk_publishing_components/components/title', locals: {
-      title: @signup_presenter.selected_taxon[:title],
+      title: @selected_taxon[:title],
       context: "Email alert subscription"
     } %>
 
     <h1 class="govuk-heading-l">What do you want to get alerts about?</h1>
 
-    <%= form_tag email_alert_subscriptions_path(@signup_presenter.taxon_facet.query_params), class: 'signup-choices' do %>
+    <%= form_tag email_alert_subscriptions_path(subscriber_list_params: subscriber_list_params), class: 'signup-choices' do %>
       <p>Everything published to GOV.UK about</p>
 
       <%= render "govuk_publishing_components/components/radio", {
         name: "subscriber_list_params[all_part_of_taxonomy_tree]",
         items: [{
-          value: @signup_presenter.selected_taxon[:value],
-          text: @signup_presenter.selected_taxon[:text],
+          value: @selected_taxon[:value],
+          text: @selected_taxon[:text],
           checked: true,
-          conditional: @signup_presenter.sub_taxons.any? ? '<p class="govuk-body">This will include alerts about all the topics below</p>'.html_safe : nil,
+          conditional: @selected_taxon[:sub_topics].any? ? '<p class="govuk-body">This will include alerts about all the topics below</p>'.html_safe : nil,
         }]
       } %>
 
-      <% if @signup_presenter.sub_taxons.any? %>
-        <p>or only one of the following <%= @signup_presenter.sub_taxons.count %> topics</p>
+      <% if @selected_taxon[:sub_topics].any? %>
+        <p>or only one of the following <%= @selected_taxon[:sub_topics].count %> topics</p>
 
         <%= render "govuk_publishing_components/components/radio", {
           name: "subscriber_list_params[all_part_of_taxonomy_tree]",
-          items: @signup_presenter.sub_taxons.map { |sub_taxon| {
+          items: @selected_taxon[:sub_topics].map { |sub_taxon| {
             value: sub_taxon["content_id"],
             text: sub_taxon["title"],
             conditional: sub_taxon["description"].present? ? ("<p class=\"govuk-body\">This will include: #{sub_taxon["description"]}</p>").html_safe : nil
