Fix feedback component layout
- feedback component collides with the edges of the screen on mobile because it sits outside of any kind of page container styles
- fix is to wrap it in a govuk-width-container

--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -21,7 +21,9 @@
           <%= yield %>
         </div>
       </main>
-      <%= render 'govuk_publishing_components/components/feedback' %>
+      <div class="govuk-width-container">
+        <%= render 'govuk_publishing_components/components/feedback' %>
+      </div>
     </div>
   </body>
 </html>
