Add tracking to Subscribe button for Transition
We want to be able to track user journeys on email signups.

--- a/app/views/brexit_checker/email_signup.html.erb
+++ b/app/views/brexit_checker/email_signup.html.erb
@@ -37,7 +37,8 @@
         <%= form_tag transition_checker_confirm_email_signup_path(c: criteria_keys), id: "checklist-email-signup" do %>
           <%= render "govuk_publishing_components/components/button", {
             text: t('brexit_checker.email_signup.sign_up_button'),
-            inline_layout: true
+            inline_layout: true,
+            class: 'js-subscribe-button'
           } %>
         <% end %>
       </div>
