--- a/app/views/brexit_checker/email_signup.html.erb
+++ b/app/views/brexit_checker/email_signup.html.erb
@@ -37,7 +37,12 @@
         <%= form_tag transition_checker_confirm_email_signup_path(c: criteria_keys), id: "checklist-email-signup" do %>
           <%= render "govuk_publishing_components/components/button", {
             text: t('brexit_checker.email_signup.sign_up_button'),
-            inline_layout: true
+            inline_layout: true,
+            data_attributes: {
+              module: "track-click",
+              "track-category": "transition-email-alert",
+              "track-action": "subscribe",
+            }
           } %>
         <% end %>
       </div>
