--- a/app/assets/stylesheets/components/_expander.scss
+++ b/app/assets/stylesheets/components/_expander.scss
@@ -75,6 +75,7 @@
 
 .app-c-expander__selected-counter {
   @include govuk-font($size: 14);
+  display: block;
   color: $govuk-text-colour;
   margin-top: 3px;
 }
