Use inset-text component
The styling broke because we were using the direct class from the design system,
which we shouldn't do. Because of this, it was not spotted when we switched to
directly requiring the CSS/JS for each component to improve performance.

Using the component from the Gem fixes all.

https://trello.com/c/mMGs7zZa/425-bug-inset-component-not-displaying-next-to-lead-time-in-checker-actions

--- a/app/views/brexit_checker/_action_list.html.erb
+++ b/app/views/brexit_checker/_action_list.html.erb
@@ -19,9 +19,7 @@
       </p>
       <% if action.lead_time.present? %>
         <div class="govuk-body">
-          <div class="govuk-inset-text">
-            <%= action.lead_time %>
-          </div>
+          <%= render "govuk_publishing_components/components/inset_text", text: action.lead_time %>
         </div>
       <% end %>
 
