--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@ $govuk-use-legacy-palette: false;
 @import 'govuk_publishing_components/components/govspeak';
 @import 'govuk_publishing_components/components/hint';
 @import 'govuk_publishing_components/components/input';
+@import 'govuk_publishing_components/components/inset-text';
 @import 'govuk_publishing_components/components/inverse-header';
 @import 'govuk_publishing_components/components/label';
 @import 'govuk_publishing_components/components/metadata';
