Change search region roles
- the finders have a role of "search" set on the wrapping element for the search filters, but this did not include the search box itself
- impractical to wrap both with the same role without also wrapping the results
- have added a role of "search" to the search box, and added aria-labels as recommended by https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/Search_role
- so on /search/all the search box has role="search" aria-label="Sitewide", search filters have role="search" aria-label="Search filters" and results remains unchanged
- on other finders, such as /search/news-and-communications, search box has role="search" aria-label="(name of finder e.g. news and communications)" and results is unchanged
- note that on /search/all there is no global search box in the header, because this would be a duplicate, but there is on the other finders, so separate work will be done to add an aria-label to that search of "Sitewide"

--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -21,7 +21,7 @@
     <div class="govuk-grid-column-two-thirds">
       <% if content_item.all_content_finder? %>
         <h1 class="app-c-search-page-heading">Search<span class="govuk-visually-hidden"> all content</span></h1>
-        <div id="keywords" class="app-patch--search-input-override">
+        <div id="keywords" class="app-patch--search-input-override" role="search" aria-label="Sitewide">
           <%= render "govuk_publishing_components/components/search", {
             aria_controls: "js-search-results-info",
             id: "finder-keyword-search",
