--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -32,7 +32,7 @@
 
   <div class="govuk-width-container">
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-one-third" role="search" aria-label="<%= content_item.title %>">
+      <div class="govuk-grid-column-one-third">
         <%= render partial: 'facet_collection'%>
       </div>
 
