--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -1,6 +1,6 @@
 <div class="filter-form">
   <% if !content_item.all_content_finder? %>
-    <div id="keywords">
+    <div id="keywords" role="search" aria-label="<%= content_item.title %>">
       <% label_text = capture do %>
         Search <span class="govuk-visually-hidden"><%= content_item.title %></span>
       <% end %>
@@ -17,7 +17,7 @@
     <% if facets.select(&:filterable?).any? %>
       <button class="app-c-button-as-link app-mobile-filters-link js-show-mobile-filters"
         data-toggle="mobile-filters-modal" data-target="facet-wrapper"
-        data-module="track-click" data-track-category="filterClicked" 
+        data-module="track-click" data-track-category="filterClicked"
         data-track-action="mobile-filter-button" data-track-label="">
         Filter <span class="govuk-visually-hidden"> results</span>
         <span class="js-selected-filter-count"><%= sanitize facet_tags.display_total_selected_filters %></span>
@@ -34,7 +34,7 @@
   </div>
 
   <% if facets.select(&:filterable?).any? %>
-    <div id="facet-wrapper" data-module="mobile-filters-modal" class="facets">
+    <div id="facet-wrapper" data-module="mobile-filters-modal" class="facets" role="search" aria-label="Search filters">
       <div class="facets__box">
         <div class="facets__header">
           <h1 class="gem-c-title__text">Filter</h1>
@@ -49,7 +49,7 @@
           </div>
           <button class="app-c-button-as-link facets__clear-link js-clear-selected-filters" type="button">
             Clear all filters
-          </button> 
+          </button>
         </div>
         <div class="facets__footer">
           <button class="gem-c-button govuk-button js-close-filters js-show-results" type="button">
