Reformat component code layout (no changes)

--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -22,12 +22,16 @@
     <%= render "govuk_publishing_components/components/inverse_header", {
       full_width: true
     } do %>
-      <%= render partial: 'show_header', locals: { inverse: inverse,
-                                                   page_metadata: page_metadata(content_item, filter_params) } %>
+      <%= render partial: 'show_header', locals: {
+        inverse: inverse,
+        page_metadata: page_metadata(content_item, filter_params)
+      } %>
     <% end %>
   <% else %>
-    <%= render partial: 'show_header', locals: { inverse: inverse,
-                                                 page_metadata: page_metadata(content_item, filter_params) } %>
+    <%= render partial: 'show_header', locals: {
+      inverse: inverse,
+      page_metadata: page_metadata(content_item, filter_params)
+    } %>
   <% end %>
 
   <div class="govuk-width-container">
