Add GOV.UK Account signup page
As with commit 821a78e8, this change is hidden behind a feature flag. If
the flag is not set in the ENV the pre-existing views will continue to
function. If it is set then we'll change over.

Previously the ability for a user to keep up to date was entirely
dependent on email signups. In Autumn 2020 we are hoping to conduct a
live prototype of GOV.UK accounts as an additional route to retrieve
results.

As GOV.UK accounts are optional and on a consent basis, we preserve the
old email signup route and add this alongside.

The initial views for the discovery promote accounts over email signups
in order to gather enough data for a sucessful experiment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,4 @@ $govuk-use-legacy-palette: false;
 @import 'finder_frontend';
 @import 'views/search';
 @import 'views/brexit_checker_results_page';
+@import 'views/brexit_checker_account_signup';
