--- a/app/views/brexit_checker/_stay_updated.html.erb
+++ b/app/views/brexit_checker/_stay_updated.html.erb
@@ -8,7 +8,7 @@
 
 <%= render "govuk_publishing_components/components/button", {
   text: t("brexit_checker.stay_updated.sign_up"),
-  href: transition_checker_email_signup_path(c: criteria_keys),
+  href: path_based_on_account_feature_flag,
   data_attributes: {
     "module": "track-click",
     "track-action": t("brexit_checker.stay_updated.sign_up"),
