--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -64,7 +64,7 @@
         "track-label": transition_checker_email_signup_path
       },
       link_text: action_based_email_link_label,
-      link_href: transition_checker_email_signup_path(c: criteria_keys),
+      link_href: path_based_on_account_feature_flag,
       link_title: t("brexit_checker.results.email_sign_up_title"),
     } %>
 
