Encode results as JWT and send them to account for signup
As with 821a78e8 and bf71c7ad, this functionality is hidden behind a
feature flag. See those commits for further explainations.

Usually an Oauth2 flow would use a redirect URL to send a user back to
the app they started from after we've logged them in. However here, as
part of our discovery we want to gather user feedback around the account
system itself.

In order to keep users in the account manager app after they've signed
up we've had to deviate from standard Oauth2 flows.

Here we will encode the users results in a tamperproof JWT and post it
to the accounts service. This will the be held whilst the user either
signs up or logs in. If that is successful, then we will look to store
their results within their account and show the user how their account
has been newly updated with the checker information.

This is likely a flow that is specific to our discovery. In future we
might prefer to follow normal Oauth2 pratice and send the user back to
the app they started on, meaning this JWT wouldn't be needed in the same
way.

--- a/app/views/brexit_checker/save_results.html.erb
+++ b/app/views/brexit_checker/save_results.html.erb
@@ -37,11 +37,13 @@
 
         <%= render "experiment_banner" %>
 
-        <%= render "govuk_publishing_components/components/button", {
+        <%= form_tag Services.accounts_api, id: "account-signup", class: "account-signup" do %>
+          <input type="hidden" name="jwt" value="<%= account_signup_jwt(criteria_keys) %>">
+          <%= render "govuk_publishing_components/components/button", {
             text: t('brexit_checker.account_signup.cta_button'),
-            href: sign_up_url,
-            margin_bottom: true
+            inline_layout: true,
           } %>
+        <% end %>
 
         <p class="govuk-body">
           <%= t('brexit_checker.account_signup.or') %>
