--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -16,6 +16,7 @@
 
   <body class="<%= yield :body_classes %>">
     <div id="wrapper">
+      <%= yield :breadcrumbs %>
       <main id="content" class="finder-frontend-content">
         <div class="finder-frontend">
           <%= yield %>
