--- a/app/views/local_restrictions/index.html.erb
+++ b/app/views/local_restrictions/index.html.erb
@@ -1,8 +1,7 @@
 <%= render layout: 'base_page' do %>
-<%= render partial: 'location_form',
-             locals: {
-               format: 'service',
-               publication_format: 'find_local_council',
-               postcode: @postcode,
-             } %>
-<% end %>
+  <p class="govuk-body">Find the website for your local council.</p>
+  <%= render partial: 'location_form', locals: { 
+    format: 'service',
+    publication_format: 'find_local_council', 
+    postcode: @postcode, 
+  } %> <% end %>
