Convert to more generic
Converting partial to a more generic partial however with postcode being the primary function. Adjusting classes inline with other partial conventions

--- a/app/assets/stylesheets/components/_lookup.scss
+++ b/app/assets/stylesheets/components/_lookup.scss
@@ -1,4 +1,4 @@
-.postcode-lookup {
+.app-c-lookup {
   padding: govuk-spacing(3);
   margin: govuk-spacing(6) 0;
   background: govuk-colour("light-grey");
