--- a/app/views/components/_lookup.html.erb
+++ b/app/views/components/_lookup.html.erb
@@ -37,7 +37,7 @@
       link[:text],
       link[:href],
       target: "_blank",
-      class: "govuk-link",
+      class: "govuk-link govuk-link--external",
       rel: "external"),
       class: "govuk-body" %>
   <% end %>
