--- a/app/views/brexit_checker/results.html.erb
+++ b/app/views/brexit_checker/results.html.erb
@@ -17,6 +17,7 @@
   <meta name="twitter:card" content="summary">
   <link rel="canonical" href="<%= page_url %>">
   <%= ab_test_variant.analytics_meta_tag.html_safe %>
+  <%= account_variant.analytics_meta_tag.html_safe %>
 <% end %>
 
 <% content_for :breadcrumbs do %>
