--- a/app/views/brexit_checker/show.html.erb
+++ b/app/views/brexit_checker/show.html.erb
@@ -1,6 +1,7 @@
 <% content_for :title, "#{@current_question.text} - #{t('brexit_checker.show.title')}" %>
 <% content_for :head do %>
   <meta name="robots" content="noindex">
+  <%= account_variant.analytics_meta_tag.html_safe %>
 <% end %>
 
 <%
