Add cross domain tracking input
We want to have a tracking value turn up as a param when we submit this form, perhaps the easiest way of doing that is with a hidden input field. The default value is empty, so we'll need some JS to populate it

--- a/app/views/brexit_checker/save_results.html.erb
+++ b/app/views/brexit_checker/save_results.html.erb
@@ -68,6 +68,7 @@
 
         <%= form_tag Services.accounts_api, id: "account-signup", class: "account-signup" do %>
           <input type="hidden" name="jwt" value="<%= @account_jwt %>">
+          <input id="cross_domain_ga" type="hidden" name="cross_domain_ga" value="">
           <%= render "govuk_publishing_components/components/button", {
             text: t('brexit_checker.account_signup.cta_button'),
             margin_bottom: true,
